# llm-stack

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cliff.toml  justfile  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml  release.yml
crates/llm-stack/: CHANGELOG.md  Cargo.toml
crates/llm-stack-anthropic/: CHANGELOG.md  Cargo.toml
crates/llm-stack-anthropic/src/: config.rs  convert.rs  factory.rs  lib.rs  provider.rs  stream.rs  types.rs
crates/llm-stack-anthropic/tests/: integration.rs
crates/llm-stack-core/: CHANGELOG.md  Cargo.toml
crates/llm-stack-core/src/: chat.rs  context.rs  error.rs  intercept.rs  lib.rs  mcp.rs  mock.rs  provider.rs  registry.rs  stream.rs  structured.rs  usage.rs
crates/llm-stack-core/src/tool/: approval.rs  config.rs  depth.rs  handler.rs  helpers.rs  loop_channel.rs  loop_detection.rs  loop_stream.rs  loop_sync.rs  mod.rs  output.rs  registry.rs
crates/llm-stack-ollama/: CHANGELOG.md  Cargo.toml
crates/llm-stack-ollama/src/: config.rs  convert.rs  factory.rs  lib.rs  provider.rs  stream.rs  types.rs
crates/llm-stack-ollama/tests/: integration.rs
crates/llm-stack-openai/: CHANGELOG.md  Cargo.toml
crates/llm-stack-openai/src/: config.rs  convert.rs  factory.rs  lib.rs  provider.rs  stream.rs  types.rs
crates/llm-stack-openai/tests/: integration.rs
crates/llm-stack/src/: chat.rs  context.rs  error.rs  intercept.rs  lib.rs  mcp.rs  mock.rs  provider.rs  registry.rs  stream.rs  structured.rs  test_helpers.rs  usage.rs
crates/llm-stack/src/tool/: approval.rs  cacher.rs  config.rs  depth.rs  error.rs  execution.rs  extractor.rs  handler.rs  helpers.rs  loop_channel.rs  loop_core.rs  loop_detection.rs  loop_owned.rs  loop_resumable.rs  loop_stream.rs  loop_sync.rs  mod.rs  output.rs  processor.rs  registry.rs  tests.rs
crates/llm-stack/src/tool/cache/: mod.rs  text.rs
crates/llm-stack/tests/: integration_tool_loop.rs
docs/: ARCH.md  context-window.md  interceptors.md  migration-from-llm.md  providers.md  quickstart.md  structured-output.md  tools.md
