[package]
name = "llm-stack-anthropic"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
description = "Anthropic Claude provider for the llm-stack SDK"
documentation = "https://docs.rs/llm-stack-anthropic"

[lints]
workspace = true

[dependencies]
llm-stack = { version = "0.5", path = "../llm-stack" }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "1"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
