[package]
name = "llm-stack"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
description = "Core traits, types, and tools for the llm-stack SDK"
documentation = "https://docs.rs/llm-stack"

[lints]
workspace = true

[features]
default = ["schema"]
schema = ["dep:jsonschema", "dep:schemars"]
tracing = ["dep:tracing"]
test-utils = []

[dependencies]
futures = "0.3"
http = "1"
rand = "0.9"
tokio = { version = "1", features = ["rt", "time"] }
tracing = { version = "0.1", optional = true }
url = { version = "2", features = ["serde"] }
jsonschema = { version = "0.29", optional = true }
schemars = { version = "1", optional = true }
reqwest = { version = "0.12", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
